@@ -70,7 +70,7 @@ public:
     /// 
     /// \param a_name  HDF-EOS5 dataset name
     /// \see HE5CF.cc
-    /// \see H5EOS.cc
+    /// \see HE5Parser.cc
     /// \return substring 
     string cut_long_name(string a_name);
 
@@ -82,7 +82,7 @@ public:
     /// 
     /// \param a_name  HDF-EOS5 dataset name
     /// \see HE5CF.cc
-    /// \see H5EOS.cc
+    /// \see HE5Parser.cc
     /// \return a new, 15-character long string.
     string generate_short_name(string a_name);
 
