@@ -1,5 +1,6 @@
 2009-12-11  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>
 	
+	* H5EOS.h/cc is renamed to HE5Parser.h/cc.
 	* H5CF.h/cc is renamed to HE5CF.h/cc.
 	* H5ShortName.h/cc is renamed to HE5ShortName.h/cc.
 	* H5PathFinder.h/cc is renamed to HDF5PathFinder.h/cc.
